Fix z-index on background image

--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -34,6 +34,7 @@
   bottom: 0;
   left: 0;
   right: 0;
+  z-index: -1;
 }
 
 @media (min-width: 1000px) {
